--- a/rush.yaml
+++ b/rush.yaml
@@ -75492,7 +75492,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up monster on your field and 1 face-up monster with the same Level on your opponent's field.
+    Destroy 1 face-up monster on your field and 1 face-up monster on your opponent's field with the same Level.
   de:
   es:
   fr:
@@ -122733,7 +122733,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, this card cannot be destroyed by their card effects, and its Level is increased by 1. Then, you can shuffle up to 1 face-down card from your opponent's field into the owner's Deck for every 3 cards sent to the Graveyard to meet the requirement.
+    Until the end of your opponent's next turn, this card cannot be destroyed by your opponent's card effects, and its Level is increased by 1. Then, you can shuffle up to 1 face-down card from your opponent's field into the owner's Deck for every 3 cards sent to the Graveyard to meet the requirement.
   de:
   es:
   fr:
@@ -127062,7 +127062,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Until the end of your opponent's next turn, while your LP are equal to or higher than their LP, this card cannot be destroyed by battle. Then, if you have 3 or more monsters in your Graveyard, you can Special Summon 1 Plant Type monster from your Graveyard face-up to your field.
+    Until the end of your opponent's next turn, while your LP are equal to or higher than your opponent's LP, this card cannot be destroyed by battle. Then, if you have 3 or more monsters in your Graveyard, you can Special Summon 1 Plant Type monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
