--- a/data/cards/05560911.yaml
+++ b/data/cards/05560911.yaml
@@ -147,6 +147,10 @@ sets:
     set_name: 'Structure Deck R: Dragunity Drive'
     rarities:
     - Common
+  - set_number: 24TP-JP117
+    set_name: Tournament Pack 2024 Vol.1
+    rarities:
+    - Secret Rare
   ko:
   - set_number: CIBR-KR038
     set_name: Circuit Break
