--- a/data/cards/10796448.yaml
+++ b/data/cards/10796448.yaml
@@ -1,5 +1,5 @@
 konami_id: 19935
-password:
+password: 10796448
 name:
   en: A★Speculation
   de:
@@ -39,7 +39,7 @@ def: 2500
 materials: 1 monster with 2500 or more ATK + 1 face-down Defense Position monster with 2500 or less DEF
 images:
 - index: 1
-  image: ASpeculation-24PR-JP-OP.png
+  image: ASpeculation-24PR-JP-NPR.png
 sets:
   ja:
   - set_number: 24PR-JP002
@@ -55,4 +55,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1026311
-fake_password: 100303002
