--- a/data/cards/44201739.yaml
+++ b/data/cards/44201739.yaml
@@ -1,5 +1,5 @@
 konami_id: 19934
-password:
+password: 44201739
 name:
   en: Mirah and Matchnoko
   de:
@@ -34,7 +34,7 @@ atk: 0
 def: 0
 images:
 - index: 1
-  image: MirahandMatchnoko-24PR-JP-OP.png
+  image: MirahandMatchnoko-24PR-JP-NPR.png
 sets:
   ja:
   - set_number: 24PR-JP001
@@ -50,4 +50,3 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1026313
-fake_password: 100303001
