--- a/rush.yaml
+++ b/rush.yaml
@@ -115091,12 +115091,18 @@ legend: true
 images:
 - index: 1
   image: NegateAttack-RDKP14-JP-R.png
+- index: 2
+  image: NegateAttack-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP14-JP065
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
+  - set_number: RD/S23P-JP010
+    set_name: Tournament Battle January 2024 prize card
+    rarities:
+    - Ultra Parallel Rare
 is_translation_unofficial:
   text:
     en: true
