--- a/rush.yaml
+++ b/rush.yaml
@@ -21829,7 +21829,7 @@ effect:
     Ogni giocatore che ha carte in mano manda la sua intera mano al Cimitero, poi pesca carte pari [al numero di carte che ogni giocatore ha mandato al Cimitero con questo effetto].
   pt:
   ja: |-
-    手札があるプレイヤーは、手札を全て墓地へ送る。その後、お互いは［この効果で自身が墓地へ送ったカードの数］だけドローする。
+    手札があるプレイヤーは、手札を全て墓地へ送る。その後、お互いは［この効果で自身の手札から墓地へ送られたカードの数］だけドローする。
   ko: |-
     패가 있는 플레이어는 패를 전부 묘지로 보낸다. 그 후, 양쪽 플레이어는 [이 효과로 자신이 묘지로 보낸 카드의 수]만큼 드로우한다.
   zh-TW:
@@ -59005,7 +59005,7 @@ effect:
   it:
   pt:
   ja: |-
-    自分のデッキの上からカード５枚を墓地へ送る。その中にモンスター（爬虫類族）がいた場合、さらに自分フィールドの表側表示モンスター（爬虫類族）１体を選んでその攻撃力をターン終了時まで［この効果で墓地へ送ったモンスター（爬虫類族）の数］×２００アップできる。
+    自分のデッキの上からカード５枚を墓地へ送る。その中にモンスター（爬虫類族）がいた場合、さらに自分フィールドの表側表示モンスター（爬虫類族）１体を選んでその攻撃力をターン終了時まで［この効果で墓地へ送られたモンスター（爬虫類族）の数］×２００アップできる。
   ko: |-
     자신의 덱 위에서 카드 5장을 묘지로 보낸다. 그 중에 몬스터(파충류족)가 있었을 경우, 추가로 자신 필드의 앞면 표시 몬스터(파충류족) 1장을 고르고 그 공격력을 턴 종료시까지 [이 효과로 묘지로 보낸 몬스터(파충류족)의 수] × 200 올릴 수 있다.
   zh-TW:
@@ -93058,7 +93058,7 @@ effect:
   it:
   pt:
   ja: |-
-    このカードのカード名はこのターン、「蒼救天使 ソレイル」になる。その後、自分のデッキの上からカード３枚を墓地へ送る。さらに自分はこの効果で墓地へ送られたカードの中から「フュージョン」１枚を選んで手札に加える事ができる。
+    このカードのカード名はこのターン、「蒼救天使 ソレイル」になる。その後、自分のデッキの上からカード３枚を墓地へ送る。さらにこの効果で墓地へ送られたカードの中から「フュージョン」１枚を選んで手札に加える事ができる。
   ko: |-
     이 카드의 카드명은 이 턴에, "창구천사 솔레일"이 된다. 그 후, 자신의 덱 위에서 카드 3장을 묘지로 보낸다. 추가로 자신은 이 효과로 묘지로 보내진 카드 중에서 "퓨전" 1장을 고르고 패에 넣을 수 있다.
   zh-TW:
@@ -128743,6 +128743,55 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1034824
 ---
+konami_id: 19931
+name:
+  en: Zero Drake
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ゼロ・ドレイク
+  ja_romaji: Zero Doreiku
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    New encounters, new adventures, a new world. A new road for the dragon whelp that turns zero into one.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    新たな出会い、新たな冒険、新たな世界。ゼロをイチにする子竜の旅路。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: WATER
+level: 1
+atk: 0
+def: 1500
+images:
+- index: 1
+  image: ZeroDrake-RDB234-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/B234-JP006
+    set_name: Battle Pack 2023 Vol.4
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1035624
+---
 konami_id:
 name:
   en: Seiyaryu
@@ -129612,55 +129661,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1035217
----
-konami_id:
-name:
-  en: Zero Drake
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ゼロ・ドレイク
-  ja_romaji: Zero Doreiku
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-text:
-  en: |-
-    New encounters, new adventures, a new world. A new road for the dragon whelp that turns zero into one.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: |-
-    新たな出会い、新たな冒険、新たな世界。ゼロをイチにする子竜の旅路。
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Dragon / Normal
-attribute: WATER
-level: 1
-atk: 0
-def: 1500
-images:
-- index: 1
-  image: ZeroDrake-RDB234-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/B234-JP006
-    set_name: Battle Pack 2023 Vol.4
-    rarities:
-    - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1035624
 ---
 konami_id:
 name:
