--- a/data/cards/23446369.yaml
+++ b/data/cards/23446369.yaml
@@ -41,25 +41,30 @@ images:
   image: EyeofIllusion-AC03-JP-SR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN011
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE011
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR011
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT011
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT011
     set_name: Maze of Millennia
     rarities:
+    - Ultra Rare
   ja:
   - set_number: AC03-JP001
     set_name: Animation Chronicle 2023
@@ -75,7 +80,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 934504
