--- a/data/cards/84262395.yaml
+++ b/data/cards/84262395.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 地缚解放
 text:
   en: |-
-    When a Level 6 or higher monster(s) is Normal or Special Summoned: Tribute 1 Level 10 "Earthbound" monster; destroy as many monsters your opponent controls as possible, and if you do, inflict damage to them equal to the destroyed monsters' total original ATK.
+    When a Level 6 or higher monster(s) is Normal or Special Summoned: Tribute 1 Level 10 "Earthbound" monster; destroy as many monsters your opponent controls as possible, and if you do, inflict damage to your opponent equal to the combined original ATK of those destroyed monster(s).
   de:
   es:
   fr:
@@ -37,23 +37,23 @@ images:
   image: EarthboundRelease-AC03-JP-NPR.png
 sets:
   en:
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN022
     set_name: Maze of Millennia
     rarities:
   de:
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE022
     set_name: Maze of Millennia
     rarities:
   fr:
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR022
     set_name: Maze of Millennia
     rarities:
   it:
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT022
     set_name: Maze of Millennia
     rarities:
   pt:
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT022
     set_name: Maze of Millennia
     rarities:
   ja:
@@ -69,7 +69,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 978641
