--- a/data/cards/60800381.yaml
+++ b/data/cards/60800381.yaml
@@ -87,9 +87,10 @@ sets:
     set_name: Synchron Extreme Structure Deck
     rarities:
     - Common
-  - set_number: MZMI-EN0??
+  - set_number: MZMI-EN000
     set_name: Maze of Millennia
     rarities:
+    - Quarter Century Secret Rare
   de:
   - set_number: 5DS1-DE041
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -115,9 +116,10 @@ sets:
     set_name: Synchron Extreme Structure Deck
     rarities:
     - Common
-  - set_number: MZMI-DE0??
+  - set_number: MZMI-DE000
     set_name: Maze of Millennia
     rarities:
+    - Quarter Century Secret Rare
   fr:
   - set_number: 5DS1-FR041
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -143,9 +145,10 @@ sets:
     set_name: Synchron Extreme Structure Deck
     rarities:
     - Common
-  - set_number: MZMI-FR0??
+  - set_number: MZMI-FR000
     set_name: Maze of Millennia
     rarities:
+    - Quarter Century Secret Rare
   it:
   - set_number: 5DS1-IT041
     set_name: "Starter Deck: Yu-Gi-Oh! 5D's"
@@ -171,9 +174,10 @@ sets:
     set_name: Synchron Extreme Structure Deck
     rarities:
     - Common
-  - set_number: MZMI-IT0??
+  - set_number: MZMI-IT000
     set_name: Maze of Millennia
     rarities:
+    - Quarter Century Secret Rare
   pt:
   - set_number: LC5D-PT029
     set_name: Legendary Collection 5D's Mega Pack
@@ -183,9 +187,10 @@ sets:
     set_name: Synchron Extreme Structure Deck
     rarities:
     - Common
-  - set_number: MZMI-PT0??
+  - set_number: MZMI-PT000
     set_name: Maze of Millennia
     rarities:
+    - Quarter Century Secret Rare
   ja:
   - set_number: YSD3-JP041
     set_name: Starter Deck 2008
