--- a/data/cards/48659020.yaml
+++ b/data/cards/48659020.yaml
@@ -8,7 +8,7 @@ name:
   it: Evocatore di Spiriti
   pt: Convocador de Espitritos
   ja: <ruby>魂<rt>たましい</rt></ruby>を<ruby>呼<rt>よ</rt></ruby>ぶ<ruby>者<rt>もの</rt></ruby>
-  ja_romaji: Tamashī o Yobumono
+  ja_romaji: Tamashī o Yobu Mono
   ko: 혼을 부르는 자
   ko_rr:
   zh-TW:
