--- a/data/cards/kdb19933.yaml
+++ b/data/cards/kdb19933.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19933
 password:
 name:
   en: Combination Maneuver - Engage Zero
@@ -23,7 +23,9 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    光・闇属性モンスター２体
+    このカード名はルール上「閃刀姫」カードとしても扱う。自分は「合体術式－エンゲージ・ゼロ」を１ターンに１度しか特殊召喚できず、このカードはL素材にできない。①：このカードが特殊召喚した場合、フィールドの攻撃力２５００以上のモンスター１体を対象として発動できる。そのモンスターの効果をターン終了時まで無効にする。②：自分の墓地に「閃刀姫－レイ」及び「閃刀姫－ロゼ」が存在する場合、このカードが攻撃するダメージステップ開始時に発動できる。相手フィールドのモンスターを全て破壊する。
   ko:
   zh-TW:
   zh-CN:
@@ -50,7 +52,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
