--- a/data/rush/19939.yaml
+++ b/data/rush/19939.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19939
 name:
   en: Jespell Wizard
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地に魔法カードが１０枚以上ある場合に発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地の魔法カード２枚を選んでデッキに戻し、このカードの攻撃力は次の相手ターン終了時まで５００アップする。
   ko:
   zh-TW:
   zh-CN:
