--- a/rush.yaml
+++ b/rush.yaml
@@ -128792,6 +128792,68 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1035624
 ---
+konami_id: 19939
+name:
+  en: Jespell Wizard
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ジェスペル・ウィザード
+  ja_romaji: Jesuperu Wizādo
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 10 or more Spell Cards in your Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分の墓地に魔法カードが１０枚以上ある場合に発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 2 Spell Cards from your Graveyard into the Deck, and this card gains 500 ATK until the end of your opponent's next turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分の墓地の魔法カード２枚を選んでデッキに戻し、このカードの攻撃力は次の相手ターン終了時まで５００アップする。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: DARK
+level: 4
+atk: 1300
+def: 600
+images:
+- index: 1
+  image: JespellWizard-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP035
+    set_name: Saikyō Jump February 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1032439
+---
 konami_id:
 name:
   en: Seiyaryu
@@ -128836,66 +128898,6 @@ sets:
     - Super Rare
     - Secret Rare
 yugipedia_page_id: 1018842
----
-konami_id:
-name:
-  en: Jespell Wizard
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: ジェスペル・ウィザード
-  ja_romaji: Jesuperu Wizādo
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    You have 10 or more Spell Cards in your Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Shuffle 2 Spell Cards from your Graveyard into the Deck, and this card gains 500 ATK until the end of your opponent's next turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Spellcaster / Effect
-attribute: DARK
-level: 4
-atk: 1300
-def: 600
-images:
-- index: 1
-  image: JespellWizard-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP035
-    set_name: Saikyō Jump February 2024 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1032439
 ---
 konami_id:
 name:
