--- a/data/cards/79409334.yaml
+++ b/data/cards/79409334.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card em Posição de Ataque for escolhido como alvo de um ataque: coloque este card em Posição de Defesa.
   ja: |-
-    このカードが相手モンスターの攻撃対象に選択された時、このカードは守備表示になる。
+    フィールド上に表側攻撃表示で存在するこのカードが攻撃対象に選択された時、このカードの表示形式を守備表示にする。
   ko: |-
     필드 위에 앞면 공격 표시로 존재하는 이 카드가 공격 대상으로 선택되었을 때, 이 카드의 표시 형식을 수비 표시로 한다.
   zh-TW: |-
