--- a/data/cards/00324483.yaml
+++ b/data/cards/00324483.yaml
@@ -43,26 +43,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE004
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR004
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT004
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT004
     set_name: Maze of Millennia
     rarities:
     - Super Rare
+    - Collector's Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
