--- a/data/cards/70366448.yaml
+++ b/data/cards/70366448.yaml
@@ -39,26 +39,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE037
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR037
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT037
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT037
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: AC03-JP027
     set_name: Animation Chronicle 2023
