--- a/data/cards/yugipedia1037022.yaml
+++ b/data/cards/yugipedia1037022.yaml
@@ -42,26 +42,31 @@ sets:
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: MZMI-DE001
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: MZMI-FR001
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: MZMI-IT001
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: MZMI-PT001
     set_name: Maze of Millennia
     rarities:
     - Ultra Rare
+    - Collector's Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
