--- a/rush.yaml
+++ b/rush.yaml
@@ -130320,18 +130320,13 @@ atk: 1400
 def: 1400
 images:
 - index: 1
-  image: KanantheSwordmistress-RD????-JP-OP.png
+  image: KanantheSwordmistress-RDTDPR-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP001
+  - set_number: RD/TDPR-JP001
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1037854
 ---
 konami_id:
@@ -130360,9 +130355,11 @@ requirement:
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Continuous
 effect:
   en: |-
-    TBA
+    If you would normal draw until you have 5 cards in your hand during the Draw Phase while your opponent has 3 monsters on their field, normal draw until you have 6 cards in your hand instead.
   de:
   es:
   fr:
@@ -130380,10 +130377,10 @@ atk: 1900
 def: 1900
 images:
 - index: 1
-  image: ExciteGroundDragon-RD????-JP-OP.png
+  image: ExciteGroundDragon-RDTDPR-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP002
+  - set_number: RD/TDPR-JP002
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
@@ -130410,7 +130407,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    Send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -130422,7 +130419,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    This turn, 1 face-up monster on your opponent's field gains 1000 ATK and cannot be destroyed by battle.
   de:
   es:
   fr:
@@ -130433,17 +130430,17 @@ effect:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: ??? / Effect
+monster_type_line: Winged Beast / Effect
 attribute: LIGHT
 level: 3
 atk: 0
 def: 0
 images:
 - index: 1
-  image: LEDPigeon-RD????-JP-OP.png
+  image: LEDPigeon-RDTDPR-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP003
+  - set_number: RD/TDPR-JP003
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
@@ -130470,7 +130467,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    Activate this card by shuffling 5 monsters with 0 DEF from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -130482,7 +130479,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    While this card is face-up in the Field Zone, face-up monsters on the field gain 500 ATK.
   de:
   es:
   fr:
@@ -130493,13 +130490,13 @@ effect:
   zh-TW:
   zh-CN:
 card_type: Spell
-property: Normal
+property: Field
 images:
 - index: 1
-  image: DreamLive-RD????-JP-OP.png
+  image: DreamLive-RDTDPR-JP-OP.png
 sets:
   ja:
-  - set_number: RD/????-JP004
+  - set_number: RD/TDPR-JP004
     set_name: Rush Duel The Legend of Duelist Promotion Pack
     rarities:
     - Normal Parallel Rare
@@ -130509,3 +130506,59 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1037860
+---
+konami_id:
+name:
+  en: Cheater's Hidden Ball Trick
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>曲<rt>くせ</rt></ruby><ruby>者<rt>もの</rt></ruby>の<ruby>隠<rt>かく</rt></ruby>し<ruby>玉<rt>たま</rt></ruby>
+  ja_romaji: Kusemono no Kakushidama
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When an opponent's monster declares an attack, shuffle 20 monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy the attacking monster. You take no battle damage this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: CheatersHiddenBallTrick-RDTDPR-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/TDPR-JP005
+    set_name: Rush Duel The Legend of Duelist Promotion Pack
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1037913
