--- a/data/cards/yugipedia1037917.yaml
+++ b/data/cards/yugipedia1037917.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 伝説の決闘場
-  ja_romaji:
+  ja: <ruby>伝<rt>でん</rt></ruby><ruby>説<rt>せつ</rt></ruby>の<ruby>決<rt>けっ</rt></ruby><ruby>闘<rt>とう</rt></ruby><ruby>場<rt>じょう</rt></ruby>
+  ja_romaji: Densetsu no Kettōjō
   ko:
   ko_rr:
   zh-TW:
