--- a/rush.yaml
+++ b/rush.yaml
@@ -39975,7 +39975,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 2 or more face-up Beast Type and/or Beast-Warrior Type monsters on your field.
+    You have 2 or more face-up Warrior Type and/or Beast-Warrior Type monsters on your field.
   de:
   es:
   fr:
@@ -40025,9 +40025,6 @@ sets:
     set_name: Legend Awakening Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 716353
 ---
 konami_id: 16712
@@ -40988,11 +40985,6 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717294
 ---
 konami_id: 16764
@@ -43503,7 +43495,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 face-up LIGHT Attribute Machine Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage. Then, if you have a face-up Machine Type Normal Monster ​on your field, inflict 500 damage to your opponent.
+    Choose 1 face-up LIGHT Attribute Machine Type monster on your field. If this monster attacks a Defense Position monster this turn, inflict piercing battle damage. Then, if you have a face-up Machine Type Normal Monster ​on your field, inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -43541,11 +43533,6 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717296
 ---
 konami_id: 16886
@@ -60390,7 +60377,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 monster on your opponent's field, and toss a coin 3 times. If at least 2 of the results are heads, destroy it.
+    Choose 1 monster on your opponent's field, and toss a coin 3 times. Destroy it if at least 2 of the results are heads.
   de:
   es:
   fr:
@@ -60430,9 +60417,6 @@ sets:
     rarities:
     - Secret Rare
     - Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 713467
 ---
 konami_id: 17487
@@ -130619,3 +130603,127 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1037924
+---
+konami_id:
+name:
+  en: Secret Investigator Misfire
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>捜<rt>そう</rt></ruby><ruby>査<rt>さ</rt></ruby><ruby>官<rt>かん</rt></ruby>ミスファイア
+  ja_romaji: Himitsu Sōsakan Misufaia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, pay 300 LP.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Inflict damage to your opponent equal to [the number of face-up LIGHT Attribute Reptile Type monsters on your field] x 300. You can only attack with Reptile Type monsters this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Effect
+attribute: LIGHT
+level: 3
+atk: 1300
+def: 0
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretInvestigatorMisfire-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP022
+    set_name: Transamu of Transcendence
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1038129
+---
+konami_id:
+name:
+  en: Secret Base Guardian Misshot
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>秘<rt>ひ</rt></ruby><ruby>密<rt>みつ</rt></ruby><ruby>基地<rt>ベース</rt></ruby><ruby>守護神<rt>ガーディアン</rt></ruby>ミスショット
+  ja_romaji: Himitsu Bēsu Gādian Misushotto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 3 Level 3 LIGHT Attribute Reptile Type monsters from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 3000 ATK until the end of your opponent's next turn. Then, if you activated this effect during the turn you Normal Summoned this card by Tributing "Elite Secret Investigator Mystery", you can destroy up to 3 face-up Level 8 or lower monsters on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Reptile / Effect
+attribute: LIGHT
+level: 7
+atk: 300
+def: 2300
+series:
+- Secret Investigator
+images:
+- index: 1
+  image: SecretBaseGuardianMisshot-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP023
+    set_name: Transamu of Transcendence
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1038130
