--- a/data/rush/16309.yaml
+++ b/data/rush/16309.yaml
@@ -43,6 +43,8 @@ images:
   illustration: CAND-DBR-JP-VG-artwork-2.png
 - index: 3
   image: CAND-RDECG1-JP-NPR.png
+- index: 4
+  image: CAND-RDDK01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP05-JP002
@@ -62,6 +64,11 @@ sets:
     set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/DK01-JP002
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
+    - Secret Rare
   ko:
   - set_number: RD/KP05-KR002
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
