--- a/data/rush/17212.yaml
+++ b/data/rush/17212.yaml
@@ -48,6 +48,8 @@ images:
   illustration: SecretOrder-G002-JP-VG-artwork.png
 - index: '1.1'
   image: SecretOrder-RDGRP1-KR-SR.png
+- index: 2
+  image: SecretOrder-RDDK01-JP-OP.png
 sets:
   ja:
   - set_number: RD/GRP1-JP024
@@ -57,6 +59,11 @@ sets:
   - set_number: RD/LGP1-JP049
     set_name: Legend Awakening Pack
     rarities:
+    - Secret Rare
+  - set_number: RD/DK01-JP005
+    set_name: '"Duelist Kingdom: Collect Star Chips!" Limited Pack'
+    rarities:
+    - Super Rare
     - Secret Rare
   ko:
   - set_number: RD/GRP1-KR024
