--- a/rush.yaml
+++ b/rush.yaml
@@ -133826,3 +133826,64 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1042859
+---
+konami_id:
+name:
+  en: Sevens Fear Magician
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: セブンスフィアー・マジシャン
+  ja_romaji: Sebunsu Fiā Majishan
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Sevens Road Magician" this turn. Then, you can make 1 face-up monster on your opponent's field lose ATK equal to [the number of different Attributes in your Graveyard] x 300 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: DARK
+level: 7
+atk: 2100
+def: 1500
+images:
+- index: 1
+  image: SevensFearMagician-RDKP16-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP16-JP024
+    set_name: Transamu of Transcendence
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1042912
