--- a/data/cards/96363153.yaml
+++ b/data/cards/96363153.yaml
@@ -39,8 +39,10 @@ property: Normal
 images:
 - index: 1
   image: Tuning-LDS3-EN-UR-1E.png
+  illustration: Tuning-MADU-EN-VG-artwork.png
 - index: 2
   image: Tuning-QCCU-JP-OP.png
+  illustration: Tuning-OW-2.png
 sets:
   en:
   - set_number: STBL-EN045
