--- a/data/rush/19284.yaml
+++ b/data/rush/19284.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. You can only activate the effects of Machine Type monsters this turn.
+    Destroy 1 monster on your opponent's field. You cannot activate monster effects this turn, except those of Machine Type monsters.
   de:
   es:
   fr:
