--- a/rush.yaml
+++ b/rush.yaml
@@ -108936,7 +108936,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. You can only activate the monster effects of WIND Attribute Warrior Type or Beast Type monsters this turn.
+    Add 1 Level 7 or higher WIND Attribute monster and 1 Warrior Type Normal Monster from your Graveyard to your hand. You cannot activate monster effects this turn, except those of WIND Attribute Warrior Type or Beast Type monsters.
   de:
   es:
   fr:
@@ -111045,7 +111045,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 "Jointech Arc Scorpio"/"Jointech Spike Centipede"/"Jointech Rex" from your Graveyard to your field in face-up Defense Position. You can only activate the effects of Machine Type monsters this turn.
+    Special Summon 1 "Jointech Arc Scorpio"/"Jointech Spike Centipede"/"Jointech Rex" from your Graveyard to your field in face-up Defense Position. You cannot activate monster effects this turn, except those of Machine Type monsters.
   de:
   es:
   fr:
@@ -111417,7 +111417,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 monster on your opponent's field. You can only activate the effects of Machine Type monsters this turn.
+    Destroy 1 monster on your opponent's field. You cannot activate monster effects this turn, except those of Machine Type monsters.
   de:
   es:
   fr:
@@ -130576,7 +130576,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 monster from your Graveyard to your hand. Then, you can add 1 "Fusion" from your Graveyard to your hand. You can only activate the monster effects of "Praime Dwarf" until the end of this turn.
+    Add 1 monster from your Graveyard to your hand. Then, you can add 1 "Fusion" from your Graveyard to your hand. You cannot activate monster effects until the end of this turn, except those of "Praime Dwarf".
   de:
   es:
   fr:
