--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -5236,8 +5236,8 @@
   fr: Millénaire
   it: Millennio
   pt: Milênio
-  ja: ミレニアムーン
-  ja_romaji: Mireniamūn
+  ja: ミレニアム
+  ja_romaji: Mireniamu
   ko: 밀레니엄
   ko_rr: Millenieom
   zh-TW:
