--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -5212,8 +5212,8 @@ Millennium:
   fr: Millénaire
   it: Millennio
   pt: Milênio
-  ja: ミレニアムーン
-  ja_romaji: Mireniamūn
+  ja: ミレニアム
+  ja_romaji: Mireniamu
   ko: 밀레니엄
   ko_rr: Millenieom
   zh-TW:
